# namug-it-blog

./: .gitignore  main.py  pyproject.toml
website/: __init__.py  models.py
website/templates/: articles.html  home.html  login.html  logout.html  public.html  register.html  sign-up.html
website/views/: views.py  views_articles.py  views_auth.py
