[project]
name = "itblog-toml"
version = "0.1.0"
description = "namug fkask blog"
authors = [
    {name = "Nathalie Mugabekazi"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "shell (>=1.0.1,<2.0.0)",
    "peewee (>=3.18.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "itblog"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
